manifests/drone/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
  labels:
    app: drone
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: drone-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: smtp
        image: tianon/exim4

      - name: drone-server
        image: drone/drone:0.5.0-rc
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: drone-data
          mountPath: /var/lib/drone
      volumes:
      - name: drone-data
        hostPath:
          path: /zpool/k8s/platform/drone
