manifests/drone/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - drone.tsar.su
    secretName: drone-tls
  rules:
  - host: drone.tsar.su
    http:
      paths:
      - path: /
        backend:
          serviceName: drone
          servicePort: 80
